updating github build workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,7 +48,7 @@ jobs:
           echo "${{ github.event.repository.name }}"
           poetry version > .temp_version.out
           cat .temp_version.out
-          the_version=$(cat .temp_version.out |grep -v Downloading |grep -v '%')
+          the_version=$(cat .temp_version.out |grep -v Downloading |grep -v '%' ||sed -e 's/podaac-tig *//')
           rm .temp_version.out
           echo "the_version=$the_version" >> $GITHUB_ENV
           echo "Initial Version: $the_version"
