snyk step for testing

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -148,31 +148,32 @@ jobs:
           echo "GITHUB REF: ${{ github.ref }}"
           echo "VENUE: ${{ env.venue }}"
 
-#       #########################################################################
-#       # Test
-#       #########################################################################
-#       # # First run snyk as a blocking step
-#       # - name: Run Snyk as a blocking step
-#       #   uses: snyk/actions/gradle@master
-#       #   env:
-#       #       SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-#       #   with:
-#       #     command: test
-#       #     args: >
-#       #         --org=${{ secrets.SNYK_ORG_ID }}
-#       #         --project-name=${{ github.repository }}
-#       #         --severity-threshold=high
-#       #         --fail-on=all
-#       # # Next run snyk to report the findings to snyk
-#       # - name: Run Snyk on Java
-#       #   uses: snyk/actions/gradle@master
-#       #   env:
-#       #     SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-#       #   with:
-#       #     command: monitor
-#       #     args: >
-#       #       --org=${{ secrets.SNYK_ORG_ID }}
-#       #       --project-name=${{ github.repository }}
+      #########################################################################
+      # Test
+      #########################################################################
+      # First run snyk as a blocking step
+      - name: Run Snyk as a blocking step
+        uses: snyk/actions/python-3.8@master
+        env:
+            SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+        with:
+          command: test
+          args: >
+              --org=${{ secrets.SNYK_ORG_ID }}
+              --project-name=${{ github.repository }}
+              --severity-threshold=high
+              --fail-on=all
+
+      # Next run snyk to report the findings to snyk
+      - name: Run Snyk on Python
+        uses: snyk/actions/python-3.8@master
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+        with:
+          command: monitor
+          args: >
+            --org=${{ secrets.SNYK_ORG_ID }}
+            --project-name=${{ github.repository }}
 
 #       # Lastly run the tests bundled with the repo
 #       - name: Test and coverage
