snyk step for testing

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -194,6 +194,7 @@ jobs:
       # These are gradle-specific steps for installing the application
       - name: Install Software
         run: |
+          pip install setuptools -U \
           poetry install
 
       # This is where tests go
