snyk step for testing

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -198,7 +198,12 @@ jobs:
           poetry install
 
       # This is where tests go
-
+      - name: Run Poetry Tests
+        run: |
+          poetry run pylint podaac \
+          poetry run flake8 podaac \
+          poetry run pytest --junitxml=build/reports/pytest.xml --cov=podaac/ --cov-report=html -m "not aws and not integration" tests/
+      ## TODO: Find out where the test report goes
 
       - name: Install Software
         run: |
