snyk step for testing

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -195,6 +195,7 @@ jobs:
       - name: Install Software
         run: |
           pip install setuptools -U \
+          pip install pylint \
           poetry install
 
       # This is where tests go
