--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -196,6 +196,7 @@ jobs:
         run: |
           pip install setuptools -U \
           pip install pylint \
+          pip install pytest \
           poetry install
 
       # This is where tests go
@@ -203,7 +204,8 @@ jobs:
         run: |
           poetry run pylint podaac \
           poetry run flake8 podaac \
-          poetry run pytest --junitxml=build/reports/pytest.xml --cov=podaac/ --cov-report=html -m "not aws and not integration" tests/
+          poetry run pytest --help
+\          poetry run pytest --junitxml=build/reports/pytest.xml --cov=podaac/ --cov-report=html -m "not aws and not integration" tests/
       ## TODO: Find out where the test report goes
 
       - name: Install Software
