--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -204,8 +204,8 @@ jobs:
         run: |
           poetry run pylint podaac \
           poetry run flake8 podaac \
-          poetry run pytest --help
-\          poetry run pytest --junitxml=build/reports/pytest.xml --cov=podaac/ --cov-report=html -m "not aws and not integration" tests/
+          poetry run pytest --help \
+          poetry run pytest --junitxml=build/reports/pytest.xml --cov=podaac/ --cov-report=html -m "not aws and not integration" tests/
       ## TODO: Find out where the test report goes
 
       - name: Install Software
