updating pypi publish workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -292,6 +292,9 @@ jobs:
 
       - name: Publish package distributions to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          password: ${{ secrets.PYPI_API_TOKEN }}
+
 
       - name: Wait for package
         if: |
